fix: products gap

--- a/src/pages/products/Products.module.css
+++ b/src/pages/products/Products.module.css
@@ -7,5 +7,5 @@
 .products {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 50px 20px;
+    gap: 20px;
 }
